# hs-kernel32

./: Setup.hs  hs-kernel32.cabal
src/Win32/: Kernel32.hsc
test/: Main.hs
